Enable posts with future time

--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,7 @@ title: "ItsDrike"
 staticDir: "static/build"
 assetDir: "static/build"
 
+buildFuture: true
 MetaDataFormat: yaml
 markup:
   goldmark:
