--- a/data/social.yml
+++ b/data/social.yml
@@ -33,13 +33,13 @@ accounts:
   discord-server:
     name: Codin' Nerds
     username: Codin' Nerds
-    links: https://discord.gg/B8rf3xxgbJ
+    link: https://discord.gg/B8rf3xxgbJ
     icon: fab fa-discord
 
   email:
     name: email
     username: itsdrike@protonmail.com
-    links: "mailto:itsdrike@protonmail.com"
+    link: "mailto:itsdrike@protonmail.com"
     icon: fas fa-at
 
 
