Add hugo-notice theme for notice shortcodes

--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,8 @@ title: "ItsDrike"
 staticDir: "static/build"
 assetDir: "static/build"
 
+theme: ["hugo-notice"]
+
 buildFuture: true
 MetaDataFormat: yaml
 markup:
