--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,6 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        error_page 401 403 404 405 407 410 429 451 /error/4xx.html
+        error_page 401 403 404 405 407 410 429 451 /error/4xx.html;
     }
 }
