--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  build-publish:
+  docker:
     runs-on: ubuntu-latest
 
     steps:
@@ -78,3 +79,20 @@ jobs:
             ghcr.io/itsdrike/web:${{ steps.sha_tag.outputs.tag }}
           build-args: |
             git_sha=${{ github.sha }}
+
+  deploy-portainer:
+    runs-on: ubuntu-latest
+    needs: [docker]
+    env:
+      WEBHOOK: ${{ secrets.PORTAINER_WEBHOOK }}
+    if: (github.event_name == 'push' || github.event == 'workflow_dispatch') && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Trigger Portainer Webhook
+        if: env.WEBHOOK != ''
+        run: |
+          response=$(curl -s -X POST -o /dev/null -w "%{http_code}" ${{ secrets.PORTAINER_WEBHOOK }})
+          if [[ "$response" -lt 200 || "$response" -ge 300 ]]; then
+            echo "Webhook trigger failed with response code $response"
+            exit 1
+          fi
